--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-	<d><h2>BANKING DATA INPUT</h2></d>
+	<d><h2>AUV Banking</h2></d>
 
 		<div class="logo">
 		<img src="min.jpeg"  width="50" height="50"  >	
