--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <style>
 
 	body{
-		background:url("child.jpeg");
+		background:url("FIN.jpg");
 		background-repeat:no-repeat;
 		background-size:cover;
 		background: linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8) ), url('child.jpeg');
