--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
 	
     <div class="main">
-        <h1>CHILDREN'S MINISTRY</h1>
+        <h1>DATA ENTRY</h1>
         
 	    <p></p>
-
-	    NOTICE: please enter the data before the dead line..... thank you.
 
 	    <p></p>
         <p><a href="home.html"><button>Select Local</button></a>  
