--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<d><h2>AUV Banking</h2></d>
 
 		<div class="logo">
-		<img src="min.jpeg"  width="50" height="50"  >	
+		<img src="AUV.jpeg"  width="50" height="50"  >	
 		</div>	
 	 <p></p>
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
