--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 	    <p></p>
 
 	    <p></p>
-        <p><a href="home.html"><button>Select Local</button></a>  
-	 <p><a href="search.html"><button>Select Local</button></a>  
+        <p><a href="depo.html"><button>DEPOSIT</button></a>  
+	 <p><a href="wit.html"><button>WITHDRAW</button></a>  
 </body>
 <style>
 
