--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		background:url("FIN.jpg");
 		background-repeat:no-repeat;
 		background-size:cover;
-		background: linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8) ), url('child.jpeg');
+		background: linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8) ), url('FIN.jpg');
 		}													  
 	</style>
 </html>
