--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
 	
     <div class="main">
-        <h1>DATA ENTRY</h1>
+        <h3>DATA ENTRY</h3>
         
 	    <p></p>
 
 	    <p></p>
-        <p><a href="depo.html"><button>DEPOSIT</button></a>  
-	 <p><a href="wit.html"><button>WITHDRAW</button></a>  
+        <p><a href="depo.html"><button><h1>DEPOSIT</h1></button></a>  
+	 <p><a href="wit.html"><button><h1>WITHDRAW</h1></button></a>  
 </body>
 <style>
 
