--- a/depo.html
+++ b/depo.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+    <title>AUV DEPO</title>
+    <link rel="stylesheet" 
+          href="index.css">
+</head>
+
+<body>
+	<d><h2>DEPOSIT</h2></d>
+	 <p></p>
+<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
+	
+    <div class="main1">
+         
+
+
+      
+</body>
+<style>
+
+	body{
+		background:url("win.jpg");
+		background-repeat:no-repeat;
+		background-size:cover;
+		background: linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8) ), url('win.jpg');
+		}													  
+	</style>
+</html>
