--- a/depo.html
+++ b/depo.html
@@ -23,7 +23,8 @@
 		
 		<div><p><input type="submit" value="Send" id="Add"  onclick="showDiv()"></p></div>
 
-
+<div id="showme" style="display:none;"></div>
+<div id="loadingGif" style="display:none"><img src="load.gif"  width="80" height="70" align-item="center" ></div>
       
 </body>
 <style>
