--- a/depo.html
+++ b/depo.html
@@ -18,8 +18,8 @@
 	
 		Amount<div><input type="text" name="Acc. Year" value="enter deposit amount"></p></div>	
         
-      		Date<div><input type="text" name="Term" value="Term 3"></p></div>
-	        Time<div><input type="text" name="Term" value="Term 3"></p></div>
+      		Date<div><input type="text" name="Term" value=""></p></div>
+	        Time<div><input type="text" name="Term" value=""></p></div>
 		
 		<div><p><input type="submit" value="Send" id="Add"  onclick="showDiv()"></p></div>
 
