--- a/depo.html
+++ b/depo.html
@@ -10,6 +10,20 @@
 <body>
 	<d><h2>DEPOSIT</h2></d>
 	 <p></p>
+
+
+<div class="main2">	
+<nav>
+<ul>
+	
+	<li><a href="index.html">Home</a></li>	 
+	<li><a href="home.html">Locals</a></li>
+
+</ul>
+</nav>	
+</div>
+	
+	
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
 	
     <div class="main1">
