--- a/depo.html
+++ b/depo.html
@@ -15,7 +15,7 @@
 <ul>
 	
 	<li><a href="index.html">Home</a></li>	 
-	<li><a href="home.html">Locals</a></li>
+	<li><a href="wit.html">Withdraw</a></li>
 
 </ul>
 </nav>	
