--- a/depo.html
+++ b/depo.html
@@ -28,7 +28,7 @@
          
 		Account Number.<div><input type="number" name="Marks" placeholder="enter the last four digits" required></p></div>
 	
-		Amount<div><input type="text" name="Acc. Year" value="enter deposit amount"></p></div>	
+		Amount<div><input type="text" name="Acc. Year" placeholder="enter deposit amount"></p></div>	
         
       		Date<div><input type="text" name="Term" value=""></p></div>
 	        Time<div><input type="text" name="Term" value=""></p></div>
