--- a/depo.html
+++ b/depo.html
@@ -21,6 +21,8 @@
 </nav>	
 </div>
 	
+
+<form method="post" action=" " name="contact-form">
 	
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
 	
@@ -28,7 +30,7 @@
          
 		Account Number.<div><input type="number" name="Marks" placeholder="enter the last four digits" required></p></div>
 	
-		Amount<div><input type="text" name="Acc. Year" placeholder="enter deposit amount"></p></div>	
+		Amount<div><input type="text" name="Acc. Year" placeholder="enter deposit amount"  required></p></div>	
         
       		Date<div><input type="text" name="Term" value=""></p></div>
 	        Time<div><input type="text" name="Term" value=""></p></div>
