--- a/depo.html
+++ b/depo.html
@@ -30,9 +30,9 @@
          
 		Account Number.<div><input type="number" name="Account Number" placeholder="enter the last four digits" required></p></div>
 		<p></p>
-		Amount<div><input type="text" name="Amount" placeholder="enter deposit amount"  required></p></div>	
+		Amount<div><input type="number" name="Amount" placeholder="enter deposit amount"  required></p></div>	
 
-		Date<div><input type="id" name="Date" id="datetime"  required></p></div>	
+		Date<div><input type="date" name="Date" id="datetime"  required></p></div>	
 	    
       		<p ></p>
 		
