--- a/depo.html
+++ b/depo.html
@@ -32,7 +32,10 @@
 		<p></p>
 		Amount<div><input type="number" name="Amount" placeholder="enter deposit amount"  required></p></div>	
 
-		Date<div><input type="datetime" name="Date" id="datetime"  required></p></div>	
+		Date<div><input type="date" name="Date" id="date"  required></p></div>	
+		
+	    	Date<div><input type="time" name="Date" id="time"  required></p></div>
+
 	    
       		<p ></p>
 		
