--- a/depo.html
+++ b/depo.html
@@ -34,7 +34,7 @@
 
 		Date<div><input type="date" name="Date" id="date"  required></p></div>	
 		
-	    	Date<div><input type="time" name="Date" id="time"  required></p></div>
+	    	Time<div><input type="time" name="Time" id="time"  required></p></div>
 
 	    
       		<p ></p>
