--- a/depo.html
+++ b/depo.html
@@ -64,6 +64,19 @@
 
   // Insert date and time into HTML
   document.getElementById("datetime").innerHTML = datetime;
+
+
+  const today = new Date();
+  const year = today.getFullYear();
+  const month = String(today.getMonth() + 1).padStart(2, '0');
+  const day = String(today.getDate()).padStart(2, '0');
+  const formattedDate = `${year}-${month}-${day}`;
+
+  document.getElementById("todayDate").value = formattedDate;
+
+
+
+	
 </script>
 
 	    
