--- a/depo.html
+++ b/depo.html
@@ -59,11 +59,11 @@
 
 <script>
   // Get current date and time
-  var now = new Date();
-  var datetime = now.toLocaleString();
+	 /// var now = new Date();
+	 /// var datetime = now.toLocaleString();
 
   // Insert date and time into HTML
-  document.getElementById("datetime").innerHTML = datetime;
+	 /// document.getElementById("datetime").innerHTML = datetime;
 
 
   const today = new Date();
