--- a/depo.html
+++ b/depo.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-
 	 <meta charset="UTF-8">
     	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
@@ -9,7 +8,6 @@
     <link rel="stylesheet" 
           href="index.css">
 </head>
-
 <body>
 	<d><h2>DEPOSIT</h2></d>
 	
@@ -37,8 +35,7 @@
 	    	Time<div><input type="time" name="Time" id="time"  required></p></div>
 
 	    
-      		<p ></p>
-		<p ></p>
+      		<div></div>
 		<div><p><input type="submit" value="Send" id="Add"  onclick="showDiv()"></p></div>
 
 	    
