--- a/depo.html
+++ b/depo.html
@@ -30,7 +30,7 @@
 		<p></p>
 		Amount<div><input type="number" name="Amount" placeholder="enter deposit amount"  required></p></div>	
 
-		Date<div><input type="date" name="Date" id="date"  required></p></div>	
+		Date<div><input type="date" name="Date" id="todaydate"  required></p></div>	
 		
 	    	Time<div><input type="time" name="Time" id="time"  required></p></div>
 
