--- a/depo.html
+++ b/depo.html
@@ -32,7 +32,7 @@
 
 		Date<div><input type="date" name="Date" id="todayDate"  required></p></div>	
 		
-	    	Time<div><input type="time" name="Time" id="time"  required></p></div>
+	    	Time<div><input type="time" name="Time" id="todayTime"  required></p></div>
 
 	    
       		<div></div>
@@ -68,9 +68,13 @@
   const month = String(today.getMonth() + 1).padStart(2, '0');
   const day = String(today.getDate()).padStart(2, '0');
   const formattedDate = `${year}-${month}-${day}`;
+  const formattedTime = `${hour}:${second}-${am/pm}`;
 
+
+
+	
   document.getElementById("todayDate").value = formattedDate;
-
+  document.getElementById("todayTime").value = formattedTime;
 
 
 	
