--- a/depo.html
+++ b/depo.html
@@ -63,11 +63,11 @@
 	 /// document.getElementById("datetime").innerHTML = datetime;
 
 
-  const today = new Date();
+  const today = new Date(now);
   const year = today.getFullYear();
   const month = String(today.getMonth() + 1).padStart(2, '0');
   const day = String(today.getDate()).padStart(2, '0');
-  const formattedDate = `${year}-${month}-${day}--${hour}:${second}`;
+  const formattedDate = `${year}-${month}-${day}-${hour}:${second}`;
  
 
 
