--- a/depo.html
+++ b/depo.html
@@ -67,7 +67,7 @@
   const year = today.getFullYear();
   const month = String(today.getMonth() + 1).padStart(2, '0');
   const day = String(today.getDate()).padStart(2, '0');
-  const formattedDate = `${year}-${month}-${day}-${hour}:${second}`;
+  const formattedDate = `${year}-${month}-${day}`;
  
 
 
