--- a/depo.html
+++ b/depo.html
@@ -67,11 +67,10 @@
   const year = today.getFullYear();
   const month = String(today.getMonth() + 1).padStart(2, '0');
   const day = String(today.getDate()).padStart(2, '0');
-  const formattedDate = `${year}-${month}-${day}`;
- 
-
-
-	
+  const hours = String(now.getHours()).padStart(2, '0');
+  const minutes = String(now.getMinutes()).padStart(2, '0');
+  const formattedDate = `${year}-${month}-${day}T${hours}:${minutes}`;
+ 	
   document.getElementById("todayDate").value = formattedDate;
 
 
