--- a/depo.html
+++ b/depo.html
@@ -66,7 +66,8 @@ function getCurrentDateTime() {
   const day = String(today.getDate()).padStart(2, '0');
   const hours = String(now.getHours()).padStart(2, '0');
   const minutes = String(now.getMinutes()).padStart(2, '0');
-  const formattedDate = `${year}-${month}-${day}T${hours}:${minutes}`;
+  const formattedayDate = `${year}-${month}-${day}T${hours}:${minutes}`;
+  return dateTimeString;
 }	
   document.getElementById("todayDate").value = formattedDate;
   dateTimeInput.value = gettodayDate();
