--- a/depo.html
+++ b/depo.html
@@ -30,7 +30,7 @@
 		<p></p>
 		Amount<div><input type="number" name="Amount" placeholder="enter deposit amount"  required></p></div>	
 
-		Date<div><input type="date" name="Date" id="todayDate" value="" required></p></div>	
+		Date<div><input type="datetime-local" name="Date" id="todayDate" value="" required></p></div>	
 		
       		<div></div>
 		<div><p><input type="submit" value="Send" id="Add"  onclick="showDiv()"></p></div>
