--- a/depo.html
+++ b/depo.html
@@ -32,9 +32,9 @@
 
 		Date<div><input type="datetime-local" name="Date" id="todayDate" value="" required></p></div>	
 		
-      		<div></div>
+      		
 		<div><p><input type="submit" value="Send" id="Add"  onclick="showDiv()"></p></div>
-
+</div>
 	    
 <div id="showme" style="display:none;"></div>
 <div id="loadingGif" style="display:none"><img src="load.gif"  width="80" height="70" align-item="center" ></div>
