--- a/depo.html
+++ b/depo.html
@@ -67,7 +67,7 @@ function getCurrentDateTime() {
   const hours = String(now.getHours()).padStart(2, '0');
   const minutes = String(now.getMinutes()).padStart(2, '0');
   const formattedayDate = `${year}-${month}-${day}T${hours}:${minutes}`;
-  return dateTimeString;
+  return tedayDateString;
 }	
   document.getElementById("todayDate").value = formattedDate;
   dateTimeInput.value = gettodayDate();
