--- a/wit.html
+++ b/wit.html
@@ -4,18 +4,18 @@
 	 <meta charset="UTF-8">
     	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
-    <title>AUV DEPO</title>
+    <title>AUV WIT</title>
     <link rel="stylesheet" 
           href="index.css">
 </head>
 <body>
-	<d><h2>DEPOSIT</h2></d>
+	<d><h2>WITHDRAW</h2></d>
 	
 <div class="main2">	
 <nav>
 <ul>	
 	<li><a href="index.html">Home</a></li>	 
-	<li><a href="wit.html">Withdraw</a></li>
+	<li><a href="depo.html">Deposit</a></li>
 </ul>
 </nav>	
 </div>
