--- a/wit.html
+++ b/wit.html
@@ -43,10 +43,10 @@
 <style>
 
 	body{
-		background:url("win.jpg");
+		background:url("winn.jpg");
 		background-repeat:no-repeat;
 		background-size:cover;
-		background: linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8) ), url('win.jpg');
+		background: linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8) ), url('winn.jpg');
 		}													  
 	</style>
 
