--- a/depo.html
+++ b/depo.html
@@ -25,7 +25,9 @@
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
 	
     <div class="main1">
-         
+
+		<div><input type="text" name="Action" value="Deposit"  required></p></div>
+	    
 		Account Number.<div><input type="number" name="Account Number" placeholder="enter the last four digits" required></p></div>
 		<p></p>
 		Amount<div><input type="number" name="Amount" placeholder="enter deposit amount"  required></p></div>	
