--- a/wit.html
+++ b/wit.html
@@ -5,8 +5,7 @@
     	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
     <title>AUV WIT</title>
-    <link rel="stylesheet" 
-          href="index.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
 	<d><h2>WITHDRAW</h2></d>
@@ -25,7 +24,9 @@
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
 	
     <div class="main1">
-         
+
+		<div><input type="text" name="Action" value="Withdraw"  required></p></div>
+	    
 		Account Number.<div><input type="number" name="Account Number" placeholder="enter the last four digits" required></p></div>
 		<p></p>
 		Amount<div><input type="number" name="Amount" placeholder="enter deposit amount"  required></p></div>	
