--- a/depo.html
+++ b/depo.html
@@ -5,8 +5,7 @@
     	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
     <title>AUV DEPO</title>
-    <link rel="stylesheet" 
-          href="index.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
 	<d><h2>DEPOSIT</h2></d>
@@ -29,7 +28,7 @@
 		<div><input type="text" name="Action" value="Deposit"  required></p></div>
 	    
 		Account Number.<div><input type="number" name="Account Number" placeholder="enter the last four digits" required></p></div>
-		<p></p>
+		
 		Amount<div><input type="number" name="Amount" placeholder="enter deposit amount"  required></p></div>	
 
 		Date<div><input type="datetime-local" name="Date" id="todayDate" value="" required></p></div>	
