--- a/depo.html
+++ b/depo.html
@@ -19,7 +19,7 @@
 </nav>	
 </div>
 <p ></p>	
-<form method="post" action=" " name="contact-form">
+<form method="post" action="https://script.google.com/macros/s/AKfycbx1MotN-FVnVdEeZQf5OOqlwS1CHVqo8m0uGNJJ0kO-j3-6_nMLVKgRfe5T81KJ55cD/exec" name="contact-form">
 	
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
 	
