--- a/depo.html
+++ b/depo.html
@@ -38,7 +38,7 @@
 </div>
 	    
 <div id="showme" style="display:none;"></div>
-<div id="loadingGif" style="display:none"><img src="load.gif"  width="80" height="70" align-item="center" ></div>
+<div id="loadingGif" ><img src="load.gif"  width="80" height="70" align-item="device center" ></div>
       
 </body>
 <style>
