--- a/wit.html
+++ b/wit.html
@@ -45,7 +45,7 @@
 	<footer>
 	<p><h6>AGE UNIQUE VENTURES</p></h6>
 	</footer>
-
+<style>
 	body{
 		background:url("winn.jpg");
 		background-repeat:no-repeat;
