--- a/depo.html
+++ b/depo.html
@@ -81,7 +81,7 @@ function getCurrentDateTime() {
 }	
   document.getElementById("todayDate").value = formattedDate;
   dateTimeInput.value = gettodayDate();
-
+  document.getElementById("todayDate").innerHTML = todayDate;
 
 	
 </script>
