--- a/wit.html
+++ b/wit.html
@@ -45,6 +45,9 @@
 	<footer>
 	<p><h6>AGE UNIQUE VENTURES</p></h6>
 	</footer>
+	</section>
+	<script src="submit.js"></script>
+		
 <style>
 	body{
 		background:url("winn.jpg");
