--- a/wit.html
+++ b/wit.html
@@ -78,7 +78,7 @@ function getCurrentDateTime() {
 }	
   document.getElementById("todayDate").value = formattedDate;
   dateTimeInput.value = gettodayDate();
-
+document.getElementById("todayDate").innerHTML = todayDate;
 
 	
 </script>
