--- a/wit.html
+++ b/wit.html
@@ -33,7 +33,7 @@
 
 		Date<div><input type="datetime-local" name="Date" id="todayDate" value="" required></p></div>	
 		
-		<div><p><input type="submit" value="Send" id="Add"  onclick="showDiv()"></p></div>
+		<div><p><input type="submit" value="Send" id="Add"  onclick="showDiv()" onclick="disableButton()"></p></div>
 
 		</form>
 		</div>	
