--- a/depo.html
+++ b/depo.html
@@ -23,6 +23,13 @@
 <form method="post" action="https://script.google.com/macros/s/AKfycbx1MotN-FVnVdEeZQf5OOqlwS1CHVqo8m0uGNJJ0kO-j3-6_nMLVKgRfe5T81KJ55cD/exec" name="contact-form">
 	
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
+
+<div id="showme" style="display:none;"></div>
+<div id="loadingGif" class="loading"  style="display:none"><img src="load.gif"  alt="Loading..."  width="80" height="70" align-item="center" ></div>
+
+		
+
+
 	
     <div class="main1">
 
@@ -36,11 +43,10 @@
 		
 		<div><p><input type="submit" value="Send" id="Add"  onclick="showDiv()"></p></div>
 	    
-<div id="showme" style="display:none;"></div>
-<div id="loadingGif" style="display:none"><img src="load.gif" width="80" height="70" align-item="center" ></div>
 
-		</form>
 		</div>
+	</form>
+
 	
 	<section>
 	<footer>
