--- a/wit.html
+++ b/wit.html
@@ -22,6 +22,10 @@
 <form method="post" action="https://script.google.com/macros/s/AKfycbx1MotN-FVnVdEeZQf5OOqlwS1CHVqo8m0uGNJJ0kO-j3-6_nMLVKgRfe5T81KJ55cD/exec" name="contact-form">
 	
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
+
+<div id="showme" style="display:none;"></div>
+<div id="loadingGif" class="loading"  style="display:none"><img src="load.gif"  alt="Loading..."  width="80" height="70" align-item="center" ></div>
+
 	
     <div class="main1">
 
