--- a/wit.html
+++ b/wit.html
@@ -24,7 +24,7 @@
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
 
 <div id="showme" style="display:none;"></div>
-<div id="loadingGif" class="loading"  style="display:none"><img src="load.gif"  alt="Loading..."  width="80" height="70" align-item="center" ></div>
+<div id="loadingGif" class="loading"><img src="load.gif"  alt="Loading..."  width="80" height="70" align-item="center" ></div>
 
 	
     <div class="main1">
