--- a/depo.html
+++ b/depo.html
@@ -38,7 +38,7 @@
 
 		Date<div><input type="datetime-local" name="Date" id="todayDate" value="" required></p></div>	
 		
-		<div><p><input type="submit" value="Send" id="Add"  onclick="showDiv()" <div id="loadingGif" class="loading" >  ></p></div>
+		<div><p><input type="submit" value="Send" id="Add"  onclick="showDiv()" div id="loadingGif" class="loading"></p></div>
 	    
 		<img src="load.gif"  alt="Loading..." width="80" height="70" align-item="center" ></div>
 	
