--- a/depo.html
+++ b/depo.html
@@ -39,8 +39,10 @@
 		Date<div><input type="datetime-local" name="Date" id="todayDate" value="" required></p></div>	
 		
 		<div><p><input type="submit" value="Send" id="Add"  onclick="showDiv()"></p></div>
+
 	    
-		<img src="load.gif"  alt="Loading..." width="80" height="70" align-item="center" ></div>
+	    
+		<div id="loadingGif" style="display:none"><img src="load.gif" alt="Loading..." width="80" height="70" align-item="center" ></div>	
 	
 		</div>
 	</form>
