--- a/wit.html
+++ b/wit.html
@@ -37,7 +37,7 @@
 		<div><p><input type="submit" value="Send" id="Add"  onclick="showDiv()"></p></div>
 
 	    
-<div id="loadingGif" style="display:none"><img src="load.gif"  width="80" height="70" align-item="center" ></div>	    
+<div id="loadingGif" style="display:none"><img src="load.gif" alt="Loading..." width="80" height="70" align-item="center" ></div	    
 <div id="showme" style="display:none;"></div>
 
 	    
