--- a/depo.html
+++ b/depo.html
@@ -38,7 +38,7 @@
 
 		Date<div><input type="datetime-local" name="Date" id="todayDate" value="" required></p></div>	
 		
-		<div><p><button type="submit" value="Send" id="Add"  onclick="showDiv()"></p></div>
+		<div><p><button type="submit" value="Send" onclick="showDiv()"></p></div>
 
 	    
 		<div id="loadingGif" style="display:none"><img src="load.gif" alt="Loading..." width="80" height="70" align-item="center" ></div>	
