--- a/wit.html
+++ b/wit.html
@@ -34,14 +34,12 @@
 
 		Date<div><input type="datetime-local" name="Date" id="todayDate" value="" required></p></div>	
 		
-		<div><p><input type="submit" value="Send" id="Add"  onclick="showDiv()"></p></div>
+		<div><p><input type="submit" value="Send"  onclick="showDiv()"></p></div>
 
 	    
 <div id="loadingGif" style="display:none"><img src="load.gif" alt="Loading..." width="80" height="70" align-item="center" ></div	    
-<div id="showme" style="display:none;"></div>
 
-	    
-		</form>
+	</form>
 		</div>	
 		
 
