--- a/depo.html
+++ b/depo.html
@@ -41,7 +41,7 @@
 		<div><p><button type="submit" value="Send" onclick="showDiv()" onclick="hideButton()" ></p></div>
 
 	    
-		<div id="loadingGif" style="display:none"><img src="load." alt="Loading..." width="80" height="70" align-item="center" ></div>	
+		<div id="loadingGif" style="display:none"><img src="load.gif" alt="Loading..." width="80" height="70" align-item="center" ></div>	
 	
 		</div>
 	</form>
