--- a/depo.html
+++ b/depo.html
@@ -38,9 +38,8 @@
 
 		Date<div><input type="datetime-local" name="Date" id="todayDate" value="" required></p></div>	
 		
-		<div><p><button type="submit" value="Send" onclick="showDiv()"></p></div>
+		<div><p><button id="myButton"  type="submit" value="Send" onclick="hideButton()"  onclick="showDiv()">Send to Office</p></div>
 	    
-		<button id="myButton" onclick="hideButton()">Click me</button>
 	    
 		<div id="loadingGif" style="display:none"><img src="load.gif" alt="Loading..." width="80" height="70" align-item="center" ></div>	
 	
