--- a/depo.html
+++ b/depo.html
@@ -38,7 +38,7 @@
 
 		Date<div><input type="datetime-local" name="Date" id="todayDate" value="" required></p></div>	
 		
-		<div><p><button id="myButton"  type="submit" value="Send" onclick="hideButton() showDiv()">Send to Office</p></div>
+		<div><p><button id="myButton"  type="submit" value="Send" onclick="showDiv() hideButton()">Send to Office</p></div>
 	    
 	    
 		<div id="loadingGif" style="display:none"><img src="load.gif" alt="Loading..." width="80" height="70" align-item="center" ></div>	
