--- a/wit.html
+++ b/wit.html
@@ -34,10 +34,9 @@
 
 		Date<div><input type="datetime-local" name="Date" id="todayDate" value="" required></p></div>	
 		
-		<div><p><input type="submit" value="Send"  onclick="showDiv()"></p></div>
+		<div><p><button id="myButton"  type="submit" value="Send" onclick="showDiv()">Send to Office</p></div>
 
-	    
-<div id="loadingGif" style="display:none"><img src="load.gif" alt="Loading..." width="80" height="70" align-item="center" ></div	    
+		<div id="loadingGif" style="display:none"><img src="load.gif" alt="Loading..." width="80" height="70" align-item="center" ></div>	    
 
 	</form>
 		</div>	
