--- a/depo.html
+++ b/depo.html
@@ -11,7 +11,7 @@
 <body>
 	<d><h2>DEPOSIT</h2></d>
 	
-<div class="main2">	
+<div class="main2"  background-color: #410957; >	
 <nav>
 <ul>	
 	<li><a href="index.html">Home</a></li>	 
