--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 		</div>	
 	 <p></p>
 
+	<div class="main2">
+	<li><a href="https://drive.google.com/drive/folders/1T03b2bD4KfdqJOwsJCdaldoP53n7VEQI?usp=drive_link"><h1>Mock Results</h1></a></li>
+	</div>
 	
     <div class="main">
         <h3>DATA ENTRY</h3>
@@ -26,7 +29,11 @@
 
 	    <p></p>
         <p><a href="depo.html"><button><h1>DEPOSIT</h1></button></a>  
-	 <p><a href="wit.html"><button><h1>WITHDRAW</h1></button></a>  
+	 <p><a href="wit.html"><button><h1>WITHDRAW</h1></button></a>
+
+    </div>
+
+	
 </body>
 <style>
 
