--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
 </head>
 
 <body>
-	<d><h2>AUV Banking</h2></d>
-
+	
 		<div class="logo">
-		<img src="AUV.jpg"  width="50" height="50"  >	
+		<img src="AUV.jpg"  width="50" height="50"><h2>AUV Banking</h2>	
 		</div>	
 	 <p></p>
 
