--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 		</div>	
 	 <p></p>
 
-	<div class="main2">
-	<li><a href="https://drive.google.com/drive/folders/1T03b2bD4KfdqJOwsJCdaldoP53n7VEQI?usp=drive_link"><h1>Mock Results</h1></a></li>
+    <div class="main2">
+	<li><a href="https://docs.google.com/spreadsheets/d/1ehATldxQFrXB23RN9QtnT9V2Ii9CXUj-Tk1OjUe-8j0/edit?gid=0#gid=0</h1></a></li>
 	</div>
+	 <p></p>
 	
     <div class="main">
         <h3>DATA ENTRY</h3>
