--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
 	
 		<div class="logo">
-		<img src="AUV.jpg"  width="50" height="50"><h2>AUV Banking</h2>	
+		<img src="AUV.jpg"  width="50" height="50">--<h2>AUV Banking</h2>	
 		</div>	
-	 <p></p>
+	 
 
     <div class="main2">
 	<li><a href="https://docs.google.com/spreadsheets/d/1ehATldxQFrXB23RN9QtnT9V2Ii9CXUj-Tk1OjUe-8j0/edit?gid=0#gid=0</h1></a></li>
