--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</div>	
 	
     <div class="main2">
-	<li><a href="<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSE0zhfA-OxD_ZQugP-aA10rrs4BNqkhpnCp-6JBzAw4hyBjGW9WMXasA_VgnhqujTX0NFLbsuQE-o2/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe><h1>View Data</h1></a></li>
+<a href="<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSE0zhfA-OxD_ZQugP-aA10rrs4BNqkhpnCp-6JBzAw4hyBjGW9WMXasA_VgnhqujTX0NFLbsuQE-o2/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe><h1>View Data</h1></a>
 	</div>
 	 <p></p>
 	<p></p>
