--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</div>	
 	
     <div class="main2">
-		<p><a href="data.html"><h2>View Data</h2></a></p>  
+		<p><a href="data.html"><h2>View Entered Data</h2></a></p>  
 	</div>
 	 <p></p>
     <div class="main">
