--- a/pin.html
+++ b/pin.html
@@ -1,4 +1,14 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	 <meta charset="UTF-8">
+    	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+    <title>AUV DEPO</title>
+    <link rel="stylesheet" href="index.css">
+	
+</head>
+<body>
 
 <form id="pinForm">
   <label for="pin">Enter PIN:</label>
