--- a/pin.html
+++ b/pin.html
@@ -17,6 +17,20 @@
   <div id="message"></div>
 </form>
 
+</body>
+
+<style>
+	body{
+		background:url("MON.jpg");
+		background-repeat:no-repeat;
+		background-size:cover;
+		background: linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8) ), url('MON.jpg');
+		}													  
+	</style>
+	
+</html>
+
+	
 <script>
   function checkPIN() {
     const pinInput = document.getElementById('pin');
@@ -33,3 +47,6 @@
     }
   }
 </script>
+
+
+	
