--- a/pin.html
+++ b/pin.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+.h<!DOCTYPE html>
 <html>
 <head>
 	 <meta charset="UTF-8">
@@ -40,7 +40,7 @@
     if (pin === "1234") { // Replace "1234" with your desired PIN
       message.textContent = "PIN correct! Redirecting...";
       // Replace with your desired URL
-      window.location.href = "https://www.example.com"; // Redirect to your website
+      window.location.href = "index.html; // Redirect to your website
     } else {
       message.textContent = "Incorrect PIN. Please try again.";
       pinInput.value = ""; // Clear the input field
