--- a/pin.html
+++ b/pin.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<form id="pinForm">
+<form id="main1">
   <label for="pin">Enter PIN:</label>
   <input type="password" id="pin" name="pin" maxlength="4" autocomplete="off">
   <button type="button" onclick="checkPIN()">Submit</button>
