--- a/depo.html
+++ b/depo.html
@@ -14,7 +14,7 @@
 <div class="main2">	
 <nav>
 <ul>	
-	<li><a href="index.html">Home</a></li>	 
+	<li><a href="home.html">Home</a></li>	 
 	<li><a href="wit.html">Withdraw</a></li>
 </ul>
 </nav>	
