--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     if (pin === "1234") { // Replace "1234" with your desired PIN
       message.textContent = "PIN correct! Redirecting...";
       // Replace with your desired URL
-      window.location.href = "index.html; // Redirect to your website
+      window.location.href = "home.html"; // Redirect to your website
     } else {
       message.textContent = "Incorrect PIN. Please try again.";
       pinInput.value = ""; // Clear the input field
