--- a/home.html
+++ b/home.html
@@ -17,7 +17,8 @@
 		</div>	
 	
     <div class="main2">
-		<p><a href="data.html"><h2>View Entered Data</h2></p></a>  
+		<p><a href="data.html"><h2>View Entered Data</h2></p></a>
+	        <p><a href="index.html"><h2>EXIT</h2></p></a>
 	</div>
 	 <p></p>
     <div class="main">
