--- a/home.html
+++ b/home.html
@@ -21,10 +21,11 @@
 		<ul>
 		<p><a href="data.html"><h2>View Entered Data</h2></p></a>
 	        <p><a href="index.html"><h2>EXIT</h2></p></a>
-
-			
+		</ul>
+	   </nav>	
 	</div>
-	 <p></p>
+   <p></p>
+	
     <div class="main">
 	    <p></p>
 
