--- a/home.html
+++ b/home.html
@@ -19,8 +19,8 @@
     <div class="main2">
 	    <nav>
 		<ul>
-		<p><a href="data.html"><h2>View Entered Data</h2></p></a>
-	        <p><a href="index.html"><h2>EXIT</h2></p></a>
+		<li></li><a href="data.html"><h2>View Entered Data</h2></p></a></li>
+	        <li></li><a href="index.html"><h2>EXIT</h2></p></a></li>
 		</ul>
 	   </nav>	
 	</div>
