--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
     <div class="main2">
 	    <nav>
 		<ul>
-		<li></li><a href="data.html"><h2>View Entered Data</h2></p></a></li>
+		<li></li><a href="data.html"><h2>Entered Data</h2></p></a></li>
 	        <li></li><a href="index.html"><h2>EXIT</h2></p></a></li>
 		</ul>
 	   </nav>	
