--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-.h<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	 <meta charset="UTF-8">
     	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
-    <title>AUV DEPO</title>
+    <title>AUV</title>
     <link rel="stylesheet" href="index.css">
 	
 </head>
@@ -12,7 +12,7 @@
 
 <form id="pinForm">
   <label for="pin">Enter PIN:</label>
-  <input type="password" id="pin" name="pin" maxlength="4" autocomplete="off"   width: "100px">
+  <input type="password" id="pin" name="pin" maxlength="5" autocomplete="off"   width: 100px;>
   <button type="button" onclick="checkPIN()">Submit</button>
   <div id="message"></div>
 </form>
@@ -38,11 +38,11 @@
     const pin = pinInput.value;
 
     if (pin === "1234") { // Replace "1234" with your desired PIN
-      message.textContent = "PIN correct! Redirecting...";
+      message.textContent = "PIN correct!"
       // Replace with your desired URL
       window.location.href = "home.html"// Redirect to your website
     } else {
-      message.textContent = "Incorrect PIN. Please try again.";
+      message.textContent = "Incorrect PIN. Please try again."
       pinInput.value = ""; // Clear the input field
     }
   }
