--- a/home.html
+++ b/home.html
@@ -19,9 +19,9 @@
     <div class="main2">
 	    <nav>
 		<ul>
-		<li><a href="data.html"><h2>Entered Data</h2></p></a></li>
-			<p></p>
-	        <li><a href="index.html"><h2>EXIT</h2></p></a></li>
+		[<li><a href="data.html"><h2>Entered Data</h2></p></a></li>]
+			____
+	        [<li><a href="index.html"><h2>EXIT</h2></p></a></li>]
 		</ul>
 	   </nav>	
 	</div>
