--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
 <style>
 	body{
-		background:url("FIN.jpg");
+		background:url("ci.jpg");
 		background-repeat:no-repeat;
 		background-size:cover;
-		background: linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8) ), url('FIN.jpg');
+		background: linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8) ), url('ci.jpg');
 		}													  
 	</style>
 	
